--- a/projector.map.json
+++ b/projector.map.json
@@ -1,20 +1,20 @@
 {
-  "ptuln": "notice_template",
+  "ptuln": "audit_error_rcd",
   "imports": [
     "java.time.LocalDateTime"
   ],
-  "ptalcn": "noticetemplate",
-  "ptstn": "NoticeTemplate",
-  "ptbcn": "NoticeTemplate",
-  "ptscn": "noticeTemplate",
-  "comment": "通知模板表",
-  "ptaucn": "NOTICETEMPLATE",
+  "ptalcn": "auditerrorrcd",
+  "ptstn": "AuditErrorRcd",
+  "ptbcn": "AuditErrorRcd",
+  "ptscn": "auditErrorRcd",
+  "comment": "系统错误记录",
+  "ptaucn": "AUDITERRORRCD",
   "fields": [
     {
       "pfscn": "id",
       "pfalcn": "id",
       "stdName": "Id",
-      "comment": "主键ID",
+      "comment": "错误ID",
       "pfuln": "id",
       "pfaucn": "ID",
       "type": "Long",
@@ -25,73 +25,87 @@
       "primaryKey": true
     },
     {
-      "pfscn": "name",
-      "pfalcn": "name",
-      "stdName": "Name",
-      "comment": "模板名称",
-      "pfuln": "name",
-      "pfaucn": "NAME",
+      "pfscn": "requestUri",
+      "pfalcn": "requesturi",
+      "stdName": "RequestUri",
+      "comment": "请求地址",
+      "pfuln": "request_uri",
+      "pfaucn": "REQUESTURI",
       "type": "String",
-      "pfstn": "Name",
-      "pfbcn": "Name",
+      "pfstn": "RequestUri",
+      "pfbcn": "RequestUri",
       "required": true,
       "seq": 1,
       "primaryKey": false
     },
     {
-      "pfscn": "code",
-      "pfalcn": "code",
-      "stdName": "Code",
-      "comment": "模板唯一编码 (业务调用用)",
-      "pfuln": "code",
-      "pfaucn": "CODE",
-      "type": "String",
-      "pfstn": "Code",
-      "pfbcn": "Code",
-      "required": true,
+      "pfscn": "userId",
+      "pfalcn": "userid",
+      "stdName": "UserId",
+      "comment": "操作人ID",
+      "pfuln": "user_id",
+      "pfaucn": "USERID",
+      "type": "Long",
+      "pfstn": "UserId",
+      "pfbcn": "UserId",
+      "required": false,
       "seq": 2,
       "primaryKey": false
     },
     {
-      "pfscn": "content",
-      "pfalcn": "content",
-      "stdName": "Content",
-      "comment": "模板内容 (含占位符)",
-      "pfuln": "content",
-      "pfaucn": "CONTENT",
+      "pfscn": "userName",
+      "pfalcn": "username",
+      "stdName": "UserName",
+      "comment": "操作人用户名",
+      "pfuln": "user_name",
+      "pfaucn": "USERNAME",
       "type": "String",
-      "pfstn": "Content",
-      "pfbcn": "Content",
-      "required": true,
+      "pfstn": "UserName",
+      "pfbcn": "UserName",
+      "required": false,
       "seq": 3,
       "primaryKey": false
     },
     {
-      "pfscn": "status",
-      "pfalcn": "status",
-      "stdName": "Status",
-      "comment": "状态: 0启用, 1禁用",
-      "pfuln": "status",
-      "pfaucn": "STATUS",
-      "type": "Integer",
-      "pfstn": "Status",
-      "pfbcn": "Status",
+      "pfscn": "errorType",
+      "pfalcn": "errortype",
+      "stdName": "ErrorType",
+      "comment": "异常类型",
+      "pfuln": "error_type",
+      "pfaucn": "ERRORTYPE",
+      "type": "String",
+      "pfstn": "ErrorType",
+      "pfbcn": "ErrorType",
       "required": true,
       "seq": 4,
       "primaryKey": false
     },
     {
-      "pfscn": "remark",
-      "pfalcn": "remark",
-      "stdName": "Remark",
-      "comment": "备注",
-      "pfuln": "remark",
-      "pfaucn": "REMARK",
+      "pfscn": "errorMessage",
+      "pfalcn": "errormessage",
+      "stdName": "ErrorMessage",
+      "comment": "异常简述",
+      "pfuln": "error_message",
+      "pfaucn": "ERRORMESSAGE",
       "type": "String",
-      "pfstn": "Remark",
-      "pfbcn": "Remark",
-      "required": false,
+      "pfstn": "ErrorMessage",
+      "pfbcn": "ErrorMessage",
+      "required": true,
       "seq": 5,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "errorStackTrace",
+      "pfalcn": "errorstacktrace",
+      "stdName": "ErrorStackTrace",
+      "comment": "完整堆栈信息",
+      "pfuln": "error_stack_trace",
+      "pfaucn": "ERRORSTACKTRACE",
+      "type": "String",
+      "pfstn": "ErrorStackTrace",
+      "pfbcn": "ErrorStackTrace",
+      "required": false,
+      "seq": 6,
       "primaryKey": false
     },
     {
@@ -105,65 +119,9 @@
       "pfstn": "CreateTime",
       "pfbcn": "CreateTime",
       "required": true,
-      "seq": 6,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "creatorId",
-      "pfalcn": "creatorid",
-      "stdName": "CreatorId",
-      "comment": "创建人ID",
-      "pfuln": "creator_id",
-      "pfaucn": "CREATORID",
-      "type": "Long",
-      "pfstn": "CreatorId",
-      "pfbcn": "CreatorId",
-      "required": true,
       "seq": 7,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "updateTime",
-      "pfalcn": "updatetime",
-      "stdName": "UpdateTime",
-      "comment": "更新时间",
-      "pfuln": "update_time",
-      "pfaucn": "UPDATETIME",
-      "type": "LocalDateTime",
-      "pfstn": "UpdateTime",
-      "pfbcn": "UpdateTime",
-      "required": true,
-      "seq": 8,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "updaterId",
-      "pfalcn": "updaterid",
-      "stdName": "UpdaterId",
-      "comment": "更新人ID",
-      "pfuln": "updater_id",
-      "pfaucn": "UPDATERID",
-      "type": "Long",
-      "pfstn": "UpdaterId",
-      "pfbcn": "UpdaterId",
-      "required": true,
-      "seq": 9,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "deleteTime",
-      "pfalcn": "deletetime",
-      "stdName": "DeleteTime",
-      "comment": "删除时间 NULL未删",
-      "pfuln": "delete_time",
-      "pfaucn": "DELETETIME",
-      "type": "LocalDateTime",
-      "pfstn": "DeleteTime",
-      "pfbcn": "DeleteTime",
-      "required": false,
-      "seq": 10,
       "primaryKey": false
     }
   ],
-  "seq": 2
+  "seq": 0
 }
