feat:注册表core_registry后端接口

--- a/projector.map.json
+++ b/projector.map.json
@@ -1,20 +1,20 @@
 {
-  "ptuln": "audit_error_rcd",
+  "ptuln": "registry",
   "imports": [
     "java.time.LocalDateTime"
   ],
-  "ptalcn": "auditerrorrcd",
-  "ptstn": "AuditErrorRcd",
-  "ptbcn": "AuditErrorRcd",
-  "ptscn": "auditErrorRcd",
-  "comment": "系统错误记录",
-  "ptaucn": "AUDITERRORRCD",
+  "ptalcn": "registry",
+  "ptstn": "Registry",
+  "ptbcn": "Registry",
+  "ptscn": "registry",
+  "comment": "注册表",
+  "ptaucn": "REGISTRY",
   "fields": [
     {
       "pfscn": "id",
       "pfalcn": "id",
       "stdName": "Id",
-      "comment": "错误ID",
+      "comment": "ID",
       "pfuln": "id",
       "pfaucn": "ID",
       "type": "Long",
@@ -25,87 +25,157 @@
       "primaryKey": true
     },
     {
-      "pfscn": "requestUri",
-      "pfalcn": "requesturi",
-      "stdName": "RequestUri",
-      "comment": "请求地址",
-      "pfuln": "request_uri",
-      "pfaucn": "REQUESTURI",
-      "type": "String",
-      "pfstn": "RequestUri",
-      "pfbcn": "RequestUri",
-      "required": true,
+      "pfscn": "parentId",
+      "pfalcn": "parentid",
+      "stdName": "ParentId",
+      "comment": "父级ID NULL顶级",
+      "pfuln": "parent_id",
+      "pfaucn": "PARENTID",
+      "type": "Long",
+      "pfstn": "ParentId",
+      "pfbcn": "ParentId",
+      "required": false,
       "seq": 1,
       "primaryKey": false
     },
     {
-      "pfscn": "userId",
-      "pfalcn": "userid",
-      "stdName": "UserId",
-      "comment": "操作人ID",
-      "pfuln": "user_id",
-      "pfaucn": "USERID",
-      "type": "Long",
-      "pfstn": "UserId",
-      "pfbcn": "UserId",
-      "required": false,
+      "pfscn": "keyPath",
+      "pfalcn": "keypath",
+      "stdName": "KeyPath",
+      "comment": "KEY的全路径",
+      "pfuln": "key_path",
+      "pfaucn": "KEYPATH",
+      "type": "String",
+      "pfstn": "KeyPath",
+      "pfbcn": "KeyPath",
+      "required": true,
       "seq": 2,
       "primaryKey": false
     },
     {
-      "pfscn": "userName",
-      "pfalcn": "username",
-      "stdName": "UserName",
-      "comment": "操作人用户名",
-      "pfuln": "user_name",
-      "pfaucn": "USERNAME",
+      "pfscn": "nkey",
+      "pfalcn": "nkey",
+      "stdName": "Nkey",
+      "comment": "键",
+      "pfuln": "nkey",
+      "pfaucn": "NKEY",
       "type": "String",
-      "pfstn": "UserName",
-      "pfbcn": "UserName",
-      "required": false,
+      "pfstn": "Nkey",
+      "pfbcn": "Nkey",
+      "required": true,
       "seq": 3,
       "primaryKey": false
     },
     {
-      "pfscn": "errorType",
-      "pfalcn": "errortype",
-      "stdName": "ErrorType",
-      "comment": "异常类型",
-      "pfuln": "error_type",
-      "pfaucn": "ERRORTYPE",
-      "type": "String",
-      "pfstn": "ErrorType",
-      "pfbcn": "ErrorType",
+      "pfscn": "nvalueKind",
+      "pfalcn": "nvaluekind",
+      "stdName": "NvalueKind",
+      "comment": "数据类型 0:字串 1:整数 2:浮点 3:日期(LDT)",
+      "pfuln": "nvalue_kind",
+      "pfaucn": "NVALUEKIND",
+      "type": "Integer",
+      "pfstn": "NvalueKind",
+      "pfbcn": "NvalueKind",
       "required": true,
       "seq": 4,
       "primaryKey": false
     },
     {
-      "pfscn": "errorMessage",
-      "pfalcn": "errormessage",
-      "stdName": "ErrorMessage",
-      "comment": "异常简述",
-      "pfuln": "error_message",
-      "pfaucn": "ERRORMESSAGE",
+      "pfscn": "nvalue",
+      "pfalcn": "nvalue",
+      "stdName": "Nvalue",
+      "comment": "值",
+      "pfuln": "nvalue",
+      "pfaucn": "NVALUE",
       "type": "String",
-      "pfstn": "ErrorMessage",
-      "pfbcn": "ErrorMessage",
-      "required": true,
+      "pfstn": "Nvalue",
+      "pfbcn": "Nvalue",
+      "required": false,
       "seq": 5,
       "primaryKey": false
     },
     {
-      "pfscn": "errorStackTrace",
-      "pfalcn": "errorstacktrace",
-      "stdName": "ErrorStackTrace",
-      "comment": "完整堆栈信息",
-      "pfuln": "error_stack_trace",
-      "pfaucn": "ERRORSTACKTRACE",
+      "pfscn": "label",
+      "pfalcn": "label",
+      "stdName": "Label",
+      "comment": "标签",
+      "pfuln": "label",
+      "pfaucn": "LABEL",
       "type": "String",
-      "pfstn": "ErrorStackTrace",
-      "pfbcn": "ErrorStackTrace",
+      "pfstn": "Label",
+      "pfbcn": "Label",
       "required": false,
       "seq": 6,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "status",
+      "pfalcn": "status",
+      "stdName": "Status",
+      "comment": "状态 0:正常 1:停用",
+      "pfuln": "status",
+      "pfaucn": "STATUS",
+      "type": "Integer",
+      "pfstn": "Status",
+      "pfbcn": "Status",
+      "required": true,
+      "seq": 7,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "seq",
+      "pfalcn": "seq",
+      "stdName": "Seq",
+      "comment": "排序",
+      "pfuln": "seq",
+      "pfaucn": "SEQ",
+      "type": "Integer",
+      "pfstn": "Seq",
+      "pfbcn": "Seq",
+      "required": true,
+      "seq": 8,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "remark",
+      "pfalcn": "remark",
+      "stdName": "Remark",
+      "comment": "说明",
+      "pfuln": "remark",
+      "pfaucn": "REMARK",
+      "type": "String",
+      "pfstn": "Remark",
+      "pfbcn": "Remark",
+      "required": false,
+      "seq": 9,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "metadata",
+      "pfalcn": "metadata",
+      "stdName": "Metadata",
+      "comment": "元数据JSON",
+      "pfuln": "metadata",
+      "pfaucn": "METADATA",
+      "type": "String",
+      "pfstn": "Metadata",
+      "pfbcn": "Metadata",
+      "required": true,
+      "seq": 10,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "isSystem",
+      "pfalcn": "issystem",
+      "stdName": "IsSystem",
+      "comment": "内置项 0:否 1:是",
+      "pfuln": "is_system",
+      "pfaucn": "ISSYSTEM",
+      "type": "Integer",
+      "pfstn": "IsSystem",
+      "pfbcn": "IsSystem",
+      "required": true,
+      "seq": 11,
       "primaryKey": false
     },
     {
@@ -119,7 +189,63 @@
       "pfstn": "CreateTime",
       "pfbcn": "CreateTime",
       "required": true,
-      "seq": 7,
+      "seq": 12,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "creatorId",
+      "pfalcn": "creatorid",
+      "stdName": "CreatorId",
+      "comment": "创建人ID",
+      "pfuln": "creator_id",
+      "pfaucn": "CREATORID",
+      "type": "Long",
+      "pfstn": "CreatorId",
+      "pfbcn": "CreatorId",
+      "required": true,
+      "seq": 13,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "updateTime",
+      "pfalcn": "updatetime",
+      "stdName": "UpdateTime",
+      "comment": "更新时间",
+      "pfuln": "update_time",
+      "pfaucn": "UPDATETIME",
+      "type": "LocalDateTime",
+      "pfstn": "UpdateTime",
+      "pfbcn": "UpdateTime",
+      "required": true,
+      "seq": 14,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "updaterId",
+      "pfalcn": "updaterid",
+      "stdName": "UpdaterId",
+      "comment": "更新人ID",
+      "pfuln": "updater_id",
+      "pfaucn": "UPDATERID",
+      "type": "Long",
+      "pfstn": "UpdaterId",
+      "pfbcn": "UpdaterId",
+      "required": true,
+      "seq": 15,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "deleteTime",
+      "pfalcn": "deletetime",
+      "stdName": "DeleteTime",
+      "comment": "删除时间 NULL未删",
+      "pfuln": "delete_time",
+      "pfaucn": "DELETETIME",
+      "type": "LocalDateTime",
+      "pfstn": "DeleteTime",
+      "pfbcn": "DeleteTime",
+      "required": false,
+      "seq": 16,
       "primaryKey": false
     }
   ],
