--- a/pdm/eas.pdma.json
+++ b/pdm/eas.pdma.json
@@ -4,7 +4,7 @@
   "avatar": "",
   "version": "4.9.4",
   "createdTime": "2025-5-31 18:54:43",
-  "updatedTime": "2026-2-9 01:52:49",
+  "updatedTime": "2026-2-9 01:58:10",
   "dbConns": [],
   "profile": {
     "default": {
@@ -24021,7 +24021,7 @@
           "uiHint": null
         },
         {
-          "defKey": "key",
+          "defKey": "nkey",
           "defName": "键",
           "comment": "",
           "type": "CHARACTER VARYING",
@@ -24040,7 +24040,25 @@
           "uiHint": null
         },
         {
-          "defKey": "value",
+          "defKey": "nvalue_kind",
+          "defName": "数据类型 0:字串 1:整数 2:浮点 3:日期(LDT)",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": true,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "refDict": "",
+          "baseType": "03F05E70-3F80-47EE-AA1A-9348591BD47D",
+          "extProps": {},
+          "domain": "1B3F3434-1CE8-4D13-A4C3-CDAE3CDF0498",
+          "id": "AB589990-504D-4AA9-B8AD-FFE44A4DCCCD"
+        },
+        {
+          "defKey": "nvalue",
           "defName": "值",
           "comment": "",
           "type": "",
