feat: 注册表条目模块 代码初始化

--- a/projector.map.json
+++ b/projector.map.json
@@ -1,20 +1,20 @@
 {
-  "ptuln": "registry",
+  "ptuln": "registry_entry",
   "imports": [
     "java.time.LocalDateTime"
   ],
-  "ptalcn": "registry",
-  "ptstn": "Registry",
-  "ptbcn": "Registry",
-  "ptscn": "registry",
-  "comment": "注册表",
-  "ptaucn": "REGISTRY",
+  "ptalcn": "registryentry",
+  "ptstn": "RegistryEntry",
+  "ptbcn": "RegistryEntry",
+  "ptscn": "registryEntry",
+  "comment": "注册表条目",
+  "ptaucn": "REGISTRYENTRY",
   "fields": [
     {
       "pfscn": "id",
       "pfalcn": "id",
       "stdName": "Id",
-      "comment": "ID",
+      "comment": "值ID",
       "pfuln": "id",
       "pfaucn": "ID",
       "type": "Long",
@@ -25,129 +25,101 @@
       "primaryKey": true
     },
     {
-      "pfscn": "parentId",
-      "pfalcn": "parentid",
-      "stdName": "ParentId",
-      "comment": "父级ID NULL顶级",
-      "pfuln": "parent_id",
-      "pfaucn": "PARENTID",
+      "pfscn": "nodeId",
+      "pfalcn": "nodeid",
+      "stdName": "NodeId",
+      "comment": "节点ID",
+      "pfuln": "node_id",
+      "pfaucn": "NODEID",
       "type": "Long",
-      "pfstn": "ParentId",
-      "pfbcn": "ParentId",
-      "required": false,
+      "pfstn": "NodeId",
+      "pfbcn": "NodeId",
+      "required": true,
       "seq": 1,
       "primaryKey": false
     },
     {
-      "pfscn": "keyPath",
-      "pfalcn": "keypath",
-      "stdName": "KeyPath",
-      "comment": "KEY的全路径",
-      "pfuln": "key_path",
-      "pfaucn": "KEYPATH",
+      "pfscn": "nodeKeyPath",
+      "pfalcn": "nodekeypath",
+      "stdName": "NodeKeyPath",
+      "comment": "项全键",
+      "pfuln": "node_key_path",
+      "pfaucn": "NODEKEYPATH",
       "type": "String",
-      "pfstn": "KeyPath",
-      "pfbcn": "KeyPath",
+      "pfstn": "NodeKeyPath",
+      "pfbcn": "NodeKeyPath",
       "required": true,
       "seq": 2,
       "primaryKey": false
     },
     {
-      "pfscn": "nkey",
-      "pfalcn": "nkey",
-      "stdName": "Nkey",
-      "comment": "键",
-      "pfuln": "nkey",
-      "pfaucn": "NKEY",
+      "pfscn": "ekey",
+      "pfalcn": "ekey",
+      "stdName": "Ekey",
+      "comment": "条目Key",
+      "pfuln": "ekey",
+      "pfaucn": "EKEY",
       "type": "String",
-      "pfstn": "Nkey",
-      "pfbcn": "Nkey",
+      "pfstn": "Ekey",
+      "pfbcn": "Ekey",
       "required": true,
       "seq": 3,
       "primaryKey": false
     },
     {
-      "pfscn": "nvalueKind",
-      "pfalcn": "nvaluekind",
-      "stdName": "NvalueKind",
-      "comment": "数据类型 0:字串 1:整数 2:浮点 3:日期(LDT)",
-      "pfuln": "nvalue_kind",
-      "pfaucn": "NVALUEKIND",
-      "type": "Integer",
-      "pfstn": "NvalueKind",
-      "pfbcn": "NvalueKind",
+      "pfscn": "valueKeyPath",
+      "pfalcn": "valuekeypath",
+      "stdName": "ValueKeyPath",
+      "comment": "节点Key的全路径",
+      "pfuln": "value_key_path",
+      "pfaucn": "VALUEKEYPATH",
+      "type": "String",
+      "pfstn": "ValueKeyPath",
+      "pfbcn": "ValueKeyPath",
       "required": true,
       "seq": 4,
       "primaryKey": false
     },
     {
-      "pfscn": "nvalue",
-      "pfalcn": "nvalue",
-      "stdName": "Nvalue",
-      "comment": "值",
-      "pfuln": "nvalue",
-      "pfaucn": "NVALUE",
-      "type": "String",
-      "pfstn": "Nvalue",
-      "pfbcn": "Nvalue",
-      "required": false,
+      "pfscn": "valueKind",
+      "pfalcn": "valuekind",
+      "stdName": "ValueKind",
+      "comment": "数据类型 0:字串 1:整数 2:浮点 3:日期(LDT)",
+      "pfuln": "value_kind",
+      "pfaucn": "VALUEKIND",
+      "type": "Integer",
+      "pfstn": "ValueKind",
+      "pfbcn": "ValueKind",
+      "required": true,
       "seq": 5,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "value",
+      "pfalcn": "value",
+      "stdName": "Value",
+      "comment": "条目值",
+      "pfuln": "value",
+      "pfaucn": "VALUE",
+      "type": "String",
+      "pfstn": "Value",
+      "pfbcn": "Value",
+      "required": false,
+      "seq": 6,
       "primaryKey": false
     },
     {
       "pfscn": "label",
       "pfalcn": "label",
       "stdName": "Label",
-      "comment": "标签",
+      "comment": "条目标签",
       "pfuln": "label",
       "pfaucn": "LABEL",
       "type": "String",
       "pfstn": "Label",
       "pfbcn": "Label",
       "required": false,
-      "seq": 6,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "status",
-      "pfalcn": "status",
-      "stdName": "Status",
-      "comment": "状态 0:正常 1:停用",
-      "pfuln": "status",
-      "pfaucn": "STATUS",
-      "type": "Integer",
-      "pfstn": "Status",
-      "pfbcn": "Status",
-      "required": true,
       "seq": 7,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "seq",
-      "pfalcn": "seq",
-      "stdName": "Seq",
-      "comment": "排序",
-      "pfuln": "seq",
-      "pfaucn": "SEQ",
-      "type": "Integer",
-      "pfstn": "Seq",
-      "pfbcn": "Seq",
-      "required": true,
-      "seq": 8,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "remark",
-      "pfalcn": "remark",
-      "stdName": "Remark",
-      "comment": "说明",
-      "pfuln": "remark",
-      "pfaucn": "REMARK",
-      "type": "String",
-      "pfstn": "Remark",
-      "pfbcn": "Remark",
-      "required": false,
-      "seq": 9,
       "primaryKey": false
     },
     {
@@ -161,6 +133,34 @@
       "pfstn": "Metadata",
       "pfbcn": "Metadata",
       "required": true,
+      "seq": 8,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "seq",
+      "pfalcn": "seq",
+      "stdName": "Seq",
+      "comment": "排序",
+      "pfuln": "seq",
+      "pfaucn": "SEQ",
+      "type": "Integer",
+      "pfstn": "Seq",
+      "pfbcn": "Seq",
+      "required": true,
+      "seq": 9,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "status",
+      "pfalcn": "status",
+      "stdName": "Status",
+      "comment": "状态 0:正常 1:停用",
+      "pfuln": "status",
+      "pfaucn": "STATUS",
+      "type": "Integer",
+      "pfstn": "Status",
+      "pfbcn": "Status",
+      "required": true,
       "seq": 10,
       "primaryKey": false
     },
@@ -168,7 +168,7 @@
       "pfscn": "isSystem",
       "pfalcn": "issystem",
       "stdName": "IsSystem",
-      "comment": "内置项 0:否 1:是",
+      "comment": "内置值 0:否 1:是",
       "pfuln": "is_system",
       "pfaucn": "ISSYSTEM",
       "type": "Integer",
