--- a/pdm/eas.pdma.json
+++ b/pdm/eas.pdma.json
@@ -4,7 +4,7 @@
   "avatar": "",
   "version": "4.9.4",
   "createdTime": "2025-5-31 18:54:43",
-  "updatedTime": "2026-2-9 03:57:29",
+  "updatedTime": "2026-2-9 04:02:54",
   "dbConns": [],
   "profile": {
     "default": {
@@ -24003,7 +24003,7 @@
         },
         {
           "defKey": "key_path",
-          "defName": "节点Key的全路径",
+          "defName": "条目Key的全路径",
           "comment": "",
           "type": "CHARACTER VARYING",
           "len": 1024,
