--- a/projector.map.json
+++ b/projector.map.json
@@ -1,20 +1,20 @@
 {
-  "ptuln": "registry_entry",
+  "ptuln": "qt_task_group",
   "imports": [
     "java.time.LocalDateTime"
   ],
-  "ptalcn": "registryentry",
-  "ptstn": "RegistryEntry",
-  "ptbcn": "RegistryEntry",
-  "ptscn": "registryEntry",
-  "comment": "注册表条目",
-  "ptaucn": "REGISTRYENTRY",
+  "ptalcn": "qttaskgroup",
+  "ptstn": "QtTaskGroup",
+  "ptbcn": "QtTaskGroup",
+  "ptscn": "qtTaskGroup",
+  "comment": "任务分组",
+  "ptaucn": "QTTASKGROUP",
   "fields": [
     {
       "pfscn": "id",
       "pfalcn": "id",
       "stdName": "Id",
-      "comment": "值ID",
+      "comment": "",
       "pfuln": "id",
       "pfaucn": "ID",
       "type": "Long",
@@ -25,157 +25,31 @@
       "primaryKey": true
     },
     {
-      "pfscn": "nodeId",
-      "pfalcn": "nodeid",
-      "stdName": "NodeId",
-      "comment": "节点ID",
-      "pfuln": "node_id",
-      "pfaucn": "NODEID",
-      "type": "Long",
-      "pfstn": "NodeId",
-      "pfbcn": "NodeId",
+      "pfscn": "name",
+      "pfalcn": "name",
+      "stdName": "Name",
+      "comment": "分组名",
+      "pfuln": "name",
+      "pfaucn": "NAME",
+      "type": "String",
+      "pfstn": "Name",
+      "pfbcn": "Name",
       "required": true,
       "seq": 1,
       "primaryKey": false
     },
     {
-      "pfscn": "nodeKeyPath",
-      "pfalcn": "nodekeypath",
-      "stdName": "NodeKeyPath",
-      "comment": "项全键",
-      "pfuln": "node_key_path",
-      "pfaucn": "NODEKEYPATH",
+      "pfscn": "remark",
+      "pfalcn": "remark",
+      "stdName": "Remark",
+      "comment": "分组备注",
+      "pfuln": "remark",
+      "pfaucn": "REMARK",
       "type": "String",
-      "pfstn": "NodeKeyPath",
-      "pfbcn": "NodeKeyPath",
-      "required": true,
+      "pfstn": "Remark",
+      "pfbcn": "Remark",
+      "required": false,
       "seq": 2,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "ekey",
-      "pfalcn": "ekey",
-      "stdName": "Ekey",
-      "comment": "条目Key",
-      "pfuln": "ekey",
-      "pfaucn": "EKEY",
-      "type": "String",
-      "pfstn": "Ekey",
-      "pfbcn": "Ekey",
-      "required": true,
-      "seq": 3,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "valueKeyPath",
-      "pfalcn": "valuekeypath",
-      "stdName": "ValueKeyPath",
-      "comment": "节点Key的全路径",
-      "pfuln": "value_key_path",
-      "pfaucn": "VALUEKEYPATH",
-      "type": "String",
-      "pfstn": "ValueKeyPath",
-      "pfbcn": "ValueKeyPath",
-      "required": true,
-      "seq": 4,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "valueKind",
-      "pfalcn": "valuekind",
-      "stdName": "ValueKind",
-      "comment": "数据类型 0:字串 1:整数 2:浮点 3:日期(LDT)",
-      "pfuln": "value_kind",
-      "pfaucn": "VALUEKIND",
-      "type": "Integer",
-      "pfstn": "ValueKind",
-      "pfbcn": "ValueKind",
-      "required": true,
-      "seq": 5,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "value",
-      "pfalcn": "value",
-      "stdName": "Value",
-      "comment": "条目值",
-      "pfuln": "value",
-      "pfaucn": "VALUE",
-      "type": "String",
-      "pfstn": "Value",
-      "pfbcn": "Value",
-      "required": false,
-      "seq": 6,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "label",
-      "pfalcn": "label",
-      "stdName": "Label",
-      "comment": "条目标签",
-      "pfuln": "label",
-      "pfaucn": "LABEL",
-      "type": "String",
-      "pfstn": "Label",
-      "pfbcn": "Label",
-      "required": false,
-      "seq": 7,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "metadata",
-      "pfalcn": "metadata",
-      "stdName": "Metadata",
-      "comment": "元数据JSON",
-      "pfuln": "metadata",
-      "pfaucn": "METADATA",
-      "type": "String",
-      "pfstn": "Metadata",
-      "pfbcn": "Metadata",
-      "required": true,
-      "seq": 8,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "seq",
-      "pfalcn": "seq",
-      "stdName": "Seq",
-      "comment": "排序",
-      "pfuln": "seq",
-      "pfaucn": "SEQ",
-      "type": "Integer",
-      "pfstn": "Seq",
-      "pfbcn": "Seq",
-      "required": true,
-      "seq": 9,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "status",
-      "pfalcn": "status",
-      "stdName": "Status",
-      "comment": "状态 0:正常 1:停用",
-      "pfuln": "status",
-      "pfaucn": "STATUS",
-      "type": "Integer",
-      "pfstn": "Status",
-      "pfbcn": "Status",
-      "required": true,
-      "seq": 10,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "isSystem",
-      "pfalcn": "issystem",
-      "stdName": "IsSystem",
-      "comment": "内置值 0:否 1:是",
-      "pfuln": "is_system",
-      "pfaucn": "ISSYSTEM",
-      "type": "Integer",
-      "pfstn": "IsSystem",
-      "pfbcn": "IsSystem",
-      "required": true,
-      "seq": 11,
       "primaryKey": false
     },
     {
@@ -189,7 +63,7 @@
       "pfstn": "CreateTime",
       "pfbcn": "CreateTime",
       "required": true,
-      "seq": 12,
+      "seq": 3,
       "primaryKey": false
     },
     {
@@ -203,7 +77,7 @@
       "pfstn": "CreatorId",
       "pfbcn": "CreatorId",
       "required": true,
-      "seq": 13,
+      "seq": 4,
       "primaryKey": false
     },
     {
@@ -217,21 +91,21 @@
       "pfstn": "UpdateTime",
       "pfbcn": "UpdateTime",
       "required": true,
-      "seq": 14,
+      "seq": 5,
       "primaryKey": false
     },
     {
-      "pfscn": "updaterId",
-      "pfalcn": "updaterid",
-      "stdName": "UpdaterId",
+      "pfscn": "updatorId",
+      "pfalcn": "updatorid",
+      "stdName": "UpdatorId",
       "comment": "更新人ID",
-      "pfuln": "updater_id",
-      "pfaucn": "UPDATERID",
+      "pfuln": "updator_id",
+      "pfaucn": "UPDATORID",
       "type": "Long",
-      "pfstn": "UpdaterId",
-      "pfbcn": "UpdaterId",
+      "pfstn": "UpdatorId",
+      "pfbcn": "UpdatorId",
       "required": true,
-      "seq": 15,
+      "seq": 6,
       "primaryKey": false
     },
     {
@@ -245,7 +119,7 @@
       "pfstn": "DeleteTime",
       "pfbcn": "DeleteTime",
       "required": false,
-      "seq": 16,
+      "seq": 7,
       "primaryKey": false
     }
   ],
