feat: QT定时任务 同步PO、VO、DTO

--- a/projector.map.json
+++ b/projector.map.json
@@ -1,20 +1,20 @@
 {
-  "ptuln": "qt_task_group",
+  "ptuln": "qt_task",
   "imports": [
     "java.time.LocalDateTime"
   ],
-  "ptalcn": "qttaskgroup",
-  "ptstn": "QtTaskGroup",
-  "ptbcn": "QtTaskGroup",
-  "ptscn": "qtTaskGroup",
-  "comment": "任务分组",
-  "ptaucn": "QTTASKGROUP",
+  "ptalcn": "qttask",
+  "ptstn": "QtTask",
+  "ptbcn": "QtTask",
+  "ptscn": "qtTask",
+  "comment": "任务调度表",
+  "ptaucn": "QTTASK",
   "fields": [
     {
       "pfscn": "id",
       "pfalcn": "id",
       "stdName": "Id",
-      "comment": "",
+      "comment": "任务ID",
       "pfuln": "id",
       "pfaucn": "ID",
       "type": "Long",
@@ -25,31 +25,171 @@
       "primaryKey": true
     },
     {
+      "pfscn": "groupId",
+      "pfalcn": "groupid",
+      "stdName": "GroupId",
+      "comment": "任务分组ID",
+      "pfuln": "group_id",
+      "pfaucn": "GROUPID",
+      "type": "Long",
+      "pfstn": "GroupId",
+      "pfbcn": "GroupId",
+      "required": false,
+      "seq": 1,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "groupName",
+      "pfalcn": "groupname",
+      "stdName": "GroupName",
+      "comment": "任务分组名",
+      "pfuln": "group_name",
+      "pfaucn": "GROUPNAME",
+      "type": "String",
+      "pfstn": "GroupName",
+      "pfbcn": "GroupName",
+      "required": false,
+      "seq": 2,
+      "primaryKey": false
+    },
+    {
       "pfscn": "name",
       "pfalcn": "name",
       "stdName": "Name",
-      "comment": "分组名",
+      "comment": "任务名",
       "pfuln": "name",
       "pfaucn": "NAME",
       "type": "String",
       "pfstn": "Name",
       "pfbcn": "Name",
       "required": true,
-      "seq": 1,
+      "seq": 3,
       "primaryKey": false
     },
     {
-      "pfscn": "remark",
-      "pfalcn": "remark",
-      "stdName": "Remark",
-      "comment": "分组备注",
-      "pfuln": "remark",
-      "pfaucn": "REMARK",
+      "pfscn": "kind",
+      "pfalcn": "kind",
+      "stdName": "Kind",
+      "comment": "0:本地BEAN 1:远程HTTP",
+      "pfuln": "kind",
+      "pfaucn": "KIND",
+      "type": "Integer",
+      "pfstn": "Kind",
+      "pfbcn": "Kind",
+      "required": true,
+      "seq": 4,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "cron",
+      "pfalcn": "cron",
+      "stdName": "Cron",
+      "comment": "CRON表达式",
+      "pfuln": "cron",
+      "pfaucn": "CRON",
       "type": "String",
-      "pfstn": "Remark",
-      "pfbcn": "Remark",
+      "pfstn": "Cron",
+      "pfbcn": "Cron",
+      "required": true,
+      "seq": 5,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "target",
+      "pfalcn": "target",
+      "stdName": "Target",
+      "comment": "调用目标(BEAN代码或HTTP地址)",
+      "pfuln": "target",
+      "pfaucn": "TARGET",
+      "type": "String",
+      "pfstn": "Target",
+      "pfbcn": "Target",
       "required": false,
-      "seq": 2,
+      "seq": 6,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "targetParam",
+      "pfalcn": "targetparam",
+      "stdName": "TargetParam",
+      "comment": "调用参数JSON",
+      "pfuln": "target_param",
+      "pfaucn": "TARGETPARAM",
+      "type": "String",
+      "pfstn": "TargetParam",
+      "pfbcn": "TargetParam",
+      "required": false,
+      "seq": 7,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "reqMethod",
+      "pfalcn": "reqmethod",
+      "stdName": "ReqMethod",
+      "comment": "请求方法",
+      "pfuln": "req_method",
+      "pfaucn": "REQMETHOD",
+      "type": "String",
+      "pfstn": "ReqMethod",
+      "pfbcn": "ReqMethod",
+      "required": false,
+      "seq": 8,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "concurrent",
+      "pfalcn": "concurrent",
+      "stdName": "Concurrent",
+      "comment": "并发执行 0:允许 1:禁止",
+      "pfuln": "concurrent",
+      "pfaucn": "CONCURRENT",
+      "type": "Integer",
+      "pfstn": "Concurrent",
+      "pfbcn": "Concurrent",
+      "required": true,
+      "seq": 9,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "misfirePolicy",
+      "pfalcn": "misfirepolicy",
+      "stdName": "MisfirePolicy",
+      "comment": "过期策略 0:放弃执行 1:立即执行 2:全部执行",
+      "pfuln": "misfire_policy",
+      "pfaucn": "MISFIREPOLICY",
+      "type": "Integer",
+      "pfstn": "MisfirePolicy",
+      "pfbcn": "MisfirePolicy",
+      "required": true,
+      "seq": 10,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "expireTime",
+      "pfalcn": "expiretime",
+      "stdName": "ExpireTime",
+      "comment": "任务有效期截止",
+      "pfuln": "expire_time",
+      "pfaucn": "EXPIRETIME",
+      "type": "LocalDateTime",
+      "pfstn": "ExpireTime",
+      "pfbcn": "ExpireTime",
+      "required": false,
+      "seq": 11,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "status",
+      "pfalcn": "status",
+      "stdName": "Status",
+      "comment": "0:正常 1:暂停",
+      "pfuln": "status",
+      "pfaucn": "STATUS",
+      "type": "Integer",
+      "pfstn": "Status",
+      "pfbcn": "Status",
+      "required": true,
+      "seq": 12,
       "primaryKey": false
     },
     {
@@ -63,7 +203,7 @@
       "pfstn": "CreateTime",
       "pfbcn": "CreateTime",
       "required": true,
-      "seq": 3,
+      "seq": 13,
       "primaryKey": false
     },
     {
@@ -77,7 +217,7 @@
       "pfstn": "CreatorId",
       "pfbcn": "CreatorId",
       "required": true,
-      "seq": 4,
+      "seq": 14,
       "primaryKey": false
     },
     {
@@ -91,7 +231,7 @@
       "pfstn": "UpdateTime",
       "pfbcn": "UpdateTime",
       "required": true,
-      "seq": 5,
+      "seq": 15,
       "primaryKey": false
     },
     {
@@ -105,7 +245,7 @@
       "pfstn": "UpdatorId",
       "pfbcn": "UpdatorId",
       "required": true,
-      "seq": 6,
+      "seq": 16,
       "primaryKey": false
     },
     {
@@ -119,7 +259,7 @@
       "pfstn": "DeleteTime",
       "pfbcn": "DeleteTime",
       "required": false,
-      "seq": 7,
+      "seq": 17,
       "primaryKey": false
     }
   ],
