feat: 更新TestJobBean以支持PageQuery参数，优化代码风格并调整application.yml配置

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,9 +61,11 @@ spring:
     lazy-initialization: true
 
   quartz:
+    auto-startup: false
     job-store-type: jdbc
     jdbc:
-      initialize-schema: always
+      initialize-schema: never
+
 server:
   port: 27500
 
