--- a/projector.map.json
+++ b/projector.map.json
@@ -1,20 +1,20 @@
 {
-  "ptuln": "qt_task",
+  "ptuln": "qt_task_rcd",
   "imports": [
     "java.time.LocalDateTime"
   ],
-  "ptalcn": "qttask",
-  "ptstn": "QtTask",
-  "ptbcn": "QtTask",
-  "ptscn": "qtTask",
-  "comment": "任务调度表",
-  "ptaucn": "QTTASK",
+  "ptalcn": "qttaskrcd",
+  "ptstn": "QtTaskRcd",
+  "ptbcn": "QtTaskRcd",
+  "ptscn": "qtTaskRcd",
+  "comment": "任务调度日志表",
+  "ptaucn": "QTTASKRCD",
   "fields": [
     {
       "pfscn": "id",
       "pfalcn": "id",
       "stdName": "Id",
-      "comment": "任务ID",
+      "comment": "调度日志ID",
       "pfuln": "id",
       "pfaucn": "ID",
       "type": "Long",
@@ -25,171 +25,143 @@
       "primaryKey": true
     },
     {
-      "pfscn": "groupId",
-      "pfalcn": "groupid",
-      "stdName": "GroupId",
-      "comment": "任务分组ID",
-      "pfuln": "group_id",
-      "pfaucn": "GROUPID",
+      "pfscn": "taskId",
+      "pfalcn": "taskid",
+      "stdName": "TaskId",
+      "comment": "任务ID",
+      "pfuln": "task_id",
+      "pfaucn": "TASKID",
       "type": "Long",
-      "pfstn": "GroupId",
-      "pfbcn": "GroupId",
-      "required": false,
+      "pfstn": "TaskId",
+      "pfbcn": "TaskId",
+      "required": true,
       "seq": 1,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "taskName",
+      "pfalcn": "taskname",
+      "stdName": "TaskName",
+      "comment": "任务名",
+      "pfuln": "task_name",
+      "pfaucn": "TASKNAME",
+      "type": "String",
+      "pfstn": "TaskName",
+      "pfbcn": "TaskName",
+      "required": true,
+      "seq": 2,
       "primaryKey": false
     },
     {
       "pfscn": "groupName",
       "pfalcn": "groupname",
       "stdName": "GroupName",
-      "comment": "任务分组名",
+      "comment": "分组名",
       "pfuln": "group_name",
       "pfaucn": "GROUPNAME",
       "type": "String",
       "pfstn": "GroupName",
       "pfbcn": "GroupName",
       "required": false,
-      "seq": 2,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "name",
-      "pfalcn": "name",
-      "stdName": "Name",
-      "comment": "任务名",
-      "pfuln": "name",
-      "pfaucn": "NAME",
-      "type": "String",
-      "pfstn": "Name",
-      "pfbcn": "Name",
-      "required": true,
       "seq": 3,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "kind",
-      "pfalcn": "kind",
-      "stdName": "Kind",
-      "comment": "0:本地BEAN 1:远程HTTP",
-      "pfuln": "kind",
-      "pfaucn": "KIND",
-      "type": "Integer",
-      "pfstn": "Kind",
-      "pfbcn": "Kind",
-      "required": true,
-      "seq": 4,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "cron",
-      "pfalcn": "cron",
-      "stdName": "Cron",
-      "comment": "CRON表达式",
-      "pfuln": "cron",
-      "pfaucn": "CRON",
-      "type": "String",
-      "pfstn": "Cron",
-      "pfbcn": "Cron",
-      "required": true,
-      "seq": 5,
       "primaryKey": false
     },
     {
       "pfscn": "target",
       "pfalcn": "target",
       "stdName": "Target",
-      "comment": "调用目标(BEAN代码或HTTP地址)",
+      "comment": "调用目标",
       "pfuln": "target",
       "pfaucn": "TARGET",
       "type": "String",
       "pfstn": "Target",
       "pfbcn": "Target",
-      "required": false,
-      "seq": 6,
+      "required": true,
+      "seq": 4,
       "primaryKey": false
     },
     {
       "pfscn": "targetParam",
       "pfalcn": "targetparam",
       "stdName": "TargetParam",
-      "comment": "调用参数JSON",
+      "comment": "调用目标参数",
       "pfuln": "target_param",
       "pfaucn": "TARGETPARAM",
       "type": "String",
       "pfstn": "TargetParam",
       "pfbcn": "TargetParam",
       "required": false,
-      "seq": 7,
+      "seq": 5,
       "primaryKey": false
     },
     {
-      "pfscn": "reqMethod",
-      "pfalcn": "reqmethod",
-      "stdName": "ReqMethod",
-      "comment": "请求方法",
-      "pfuln": "req_method",
-      "pfaucn": "REQMETHOD",
+      "pfscn": "targetResult",
+      "pfalcn": "targetresult",
+      "stdName": "TargetResult",
+      "comment": "调用目标返回内容(错误时为异常堆栈)",
+      "pfuln": "target_result",
+      "pfaucn": "TARGETRESULT",
       "type": "String",
-      "pfstn": "ReqMethod",
-      "pfbcn": "ReqMethod",
+      "pfstn": "TargetResult",
+      "pfbcn": "TargetResult",
       "required": false,
-      "seq": 8,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "concurrent",
-      "pfalcn": "concurrent",
-      "stdName": "Concurrent",
-      "comment": "并发执行 0:允许 1:禁止",
-      "pfuln": "concurrent",
-      "pfaucn": "CONCURRENT",
-      "type": "Integer",
-      "pfstn": "Concurrent",
-      "pfbcn": "Concurrent",
-      "required": true,
-      "seq": 9,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "misfirePolicy",
-      "pfalcn": "misfirepolicy",
-      "stdName": "MisfirePolicy",
-      "comment": "过期策略 0:放弃执行 1:立即执行 2:全部执行",
-      "pfuln": "misfire_policy",
-      "pfaucn": "MISFIREPOLICY",
-      "type": "Integer",
-      "pfstn": "MisfirePolicy",
-      "pfbcn": "MisfirePolicy",
-      "required": true,
-      "seq": 10,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "expireTime",
-      "pfalcn": "expiretime",
-      "stdName": "ExpireTime",
-      "comment": "任务有效期截止",
-      "pfuln": "expire_time",
-      "pfaucn": "EXPIRETIME",
-      "type": "LocalDateTime",
-      "pfstn": "ExpireTime",
-      "pfbcn": "ExpireTime",
-      "required": false,
-      "seq": 11,
+      "seq": 6,
       "primaryKey": false
     },
     {
       "pfscn": "status",
       "pfalcn": "status",
       "stdName": "Status",
-      "comment": "0:正常 1:暂停",
+      "comment": "运行状态 0:正常 1:失败 2:超时 3:已调度",
       "pfuln": "status",
       "pfaucn": "STATUS",
       "type": "Integer",
       "pfstn": "Status",
       "pfbcn": "Status",
       "required": true,
-      "seq": 12,
+      "seq": 7,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "startTime",
+      "pfalcn": "starttime",
+      "stdName": "StartTime",
+      "comment": "运行开始时间",
+      "pfuln": "start_time",
+      "pfaucn": "STARTTIME",
+      "type": "LocalDateTime",
+      "pfstn": "StartTime",
+      "pfbcn": "StartTime",
+      "required": true,
+      "seq": 8,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "endTime",
+      "pfalcn": "endtime",
+      "stdName": "EndTime",
+      "comment": "运行结束时间",
+      "pfuln": "end_time",
+      "pfaucn": "ENDTIME",
+      "type": "LocalDateTime",
+      "pfstn": "EndTime",
+      "pfbcn": "EndTime",
+      "required": false,
+      "seq": 9,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "costTime",
+      "pfalcn": "costtime",
+      "stdName": "CostTime",
+      "comment": "耗时(MS)",
+      "pfuln": "cost_time",
+      "pfaucn": "COSTTIME",
+      "type": "Integer",
+      "pfstn": "CostTime",
+      "pfbcn": "CostTime",
+      "required": false,
+      "seq": 10,
       "primaryKey": false
     },
     {
@@ -203,63 +175,7 @@
       "pfstn": "CreateTime",
       "pfbcn": "CreateTime",
       "required": true,
-      "seq": 13,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "creatorId",
-      "pfalcn": "creatorid",
-      "stdName": "CreatorId",
-      "comment": "创建人ID",
-      "pfuln": "creator_id",
-      "pfaucn": "CREATORID",
-      "type": "Long",
-      "pfstn": "CreatorId",
-      "pfbcn": "CreatorId",
-      "required": true,
-      "seq": 14,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "updateTime",
-      "pfalcn": "updatetime",
-      "stdName": "UpdateTime",
-      "comment": "更新时间",
-      "pfuln": "update_time",
-      "pfaucn": "UPDATETIME",
-      "type": "LocalDateTime",
-      "pfstn": "UpdateTime",
-      "pfbcn": "UpdateTime",
-      "required": true,
-      "seq": 15,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "updatorId",
-      "pfalcn": "updatorid",
-      "stdName": "UpdatorId",
-      "comment": "更新人ID",
-      "pfuln": "updator_id",
-      "pfaucn": "UPDATORID",
-      "type": "Long",
-      "pfstn": "UpdatorId",
-      "pfbcn": "UpdatorId",
-      "required": true,
-      "seq": 16,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "deleteTime",
-      "pfalcn": "deletetime",
-      "stdName": "DeleteTime",
-      "comment": "删除时间 NULL未删",
-      "pfuln": "delete_time",
-      "pfaucn": "DELETETIME",
-      "type": "LocalDateTime",
-      "pfstn": "DeleteTime",
-      "pfbcn": "DeleteTime",
-      "required": false,
-      "seq": 17,
+      "seq": 11,
       "primaryKey": false
     }
   ],
